--- a/app/src/main/res/layout-land/activity_fullscreen_clock.xml
+++ b/app/src/main/res/layout-land/activity_fullscreen_clock.xml
@@ -1,6 +1,7 @@
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
     android:layout_height="match_parent" android:background="#000000"
+    android:keepScreenOn="true"
     tools:context=".FullscreenClock">
 
     <!-- This FrameLayout insets its children based on system windows using
@@ -20,7 +21,8 @@
             android:layout_height="wrap_content"
             android:id="@+id/textClock"
             android:layout_gravity="center"
-            android:textSize="135sp" />
+            android:textSize="220sp"
+            android:typeface="serif" />
     </FrameLayout>
 
 </FrameLayout>
